Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/wildcards/neg/Unbounded.out
Unbounded.java:14:29: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.type.captureof: 1, ?, java.lang.String)
1 error
